@@ -2,7 +2,7 @@
 	If you're reading this in github, 
 	please change to Tabs-4 as github is broken.
 	============================================= */
-body,html 				{background:none; color:#fff; width:100%; height:100%; margin:0; padding:0; font-family:Arial, Helvetica, sans-serif; text-rendering:optimizelegibility; word-wrap:break-word;}
+body,html 				{background:none; color:#444; width:100%; height:100%; margin:0; padding:0; font-family:Arial, Helvetica, sans-serif; text-rendering:optimizelegibility; word-wrap:break-word;}
 
 
 /*	Links & fonts
@@ -272,3 +272,5 @@ a.data_invest:hover		{color:#fff; background-color:rgba(194, 0, 255, 0.8);}
 /*	Beige Alert
 	============================================= */
 .beigealert				{width:100%; margin:0 auto; background-color:#D80051; color:#fff; font-size:1em; line-height:1.25em; text-align:center; padding:10px 0;}
+a.beige					{font-weight:bold; color:#FFFF00;}
+a.beige:hover			{color:#fff;}
