@@ -2,7 +2,7 @@
 	If you're reading this in github, 
 	please change to Tabs-4 as github is broken.
 	============================================= */
-body,html 				{background:none; color:#fff; width:100%; height:100%; margin:0; padding:0; font-family:Arial, Helvetica, sans-serif; text-rendering:optimizelegibility; word-wrap:break-word;}
+body,html 				{background:none; color:#444; width:100%; height:100%; margin:0; padding:0; font-family:Arial, Helvetica, sans-serif; text-rendering:optimizelegibility; word-wrap:break-word;}
 
 
 /*	Links & fonts
