@@ -92,7 +92,9 @@
 	.team a:hover	{color:#fff;}
 	.team a:active	{color:#A3A3A3;}
 	.mit		{width:480px; display:inline-block; vertical-align:top; font-size:13px; line-height:13px; color:#fff; text-align:right;}
-	.beigealert		{width:100%; margin:0 auto; background-color:#D80051; color:#fff; font-size:1em; line-height:1.25em; text-align:center; padding:10px 20px;}
+	.beigealert				{width:100%; margin:0 auto; background-color:#D80051; color:#fff; font-size:1em; line-height:1.25em; text-align:center; padding:10px 0;}
+	a.beige					{font-weight:bold; color:#FFFF00;}
+	a.beige:hover			{color:#fff;}
 
 </style>
 	</head> 
@@ -102,7 +104,7 @@
 	
 <div class="navi">
 	<div class="beigealert">
-		<img src="/art/alert_icon.png" alt="Declaration icon" width="15" height="15"> D-Portal is still in very early development &amp; scheduled for Alpha release mid-April. Thank you for your patience!
+		<img src="/art/alert_icon.png" alt="Declaration icon" width="15" height="15"> D-Portal is still in very early development &amp; scheduled for Alpha release mid-April. Thank you for your patience! Please provide any feedback <a href="/html/feedback.html" class="beige">here</a>.
 	</div>
 	<div class="defcon">
 		<div class="hiwrap">
