@@ -1,6 +1,7 @@
 Development Portal (2014-03-21 shi)
 ==============================
 New branding reflected on site
+Beige alert over entire site
 
 
 Country Tracker (2014-03-20 shi)
